Sun Sep  7 07:45:35 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* root.c: Reindent a few things.
	* root.c, cvs.h (same_directories): Remove.  Never used,
	portability hassle.

	* add.c (add_directory): When checking for CVSADM, call fncmp not
	strcmp.  I actually suspect this code doesn't do much these days,
	but fncmp clearly will make more sense than strcmp.

	* rtag.c (rtag_usage), tag.c (tag_usage): Reword to hopefully be
	clearer that -r takes either numeric or symbolic revision.

	* ignore.c (ign_dir_add, ignore_directory): Reindent.  Tweaks to
	comments.

	* update.c (checkout_file): Only ignore existence_error from
	unlink_file_dir, not all errors.

	* checkout.c (safe_location): Check for errors from xgetwd.
	* create_adm.c (Create_Admin): Remove call to xgetwd; it is just
	debugging code anyway and it wasn't checking for errors.

	* sanity.sh: Add comment about default value for TESTDIR.

	* server.c (serve_log): Change "cvslog" to "log".  This
	(accidental, I presume) error had made it impossible for anonymous
	users to run "cvs log".

	* classify.c (sticky_ck): Change to take an finfo argument rather
	than several arguments taken from there.  Cleans up the way the
	calling convention had depended on SERVER_SUPPORT.
	(Classify_File): Change callers.

	* version.c: Change version number to 1.9.17.

	* Version 1.9.16.

	* recurse.c (do_dir_proc): In combining repository and dir, omit
	trailing "/." from repository.
	* sanity.sh (modules3): Adjust test modules3-4 so we test for
	this fix (this is not just cosmetic; the bug prevented the
	"Rebuilding administrative file database" from happening).
	modules2 already tests the "co CVSROOT/modules" usage.

	* checkout.c (checkout_proc): When building top-level CVSADM
	directory, continue the process of walking up the repository one
	more level, rather than putting in the same repository as for the
	first-level directory.
	* sanity.sh: Adjust tests basicb-1b, basicb-9b, modules3-7f,